--- a/assets/css/algebra.css
+++ b/assets/css/algebra.css
@@ -1,9 +1,5 @@
-@font-face {
-    font-family: 'Itim';
-    src: url('../font/Itim-Regular.woff');
-}
+@import url(index.css);
 
-*{margin: 0; padding: 0;}
 
 body{
     background-image:url(../img/background.png);
