--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,7 +8,7 @@
 body{
     background-image:url(../img/background.png);
     background-size: 110%;
-    background-repeat: no-repeat;
+  
     background-position: fixed;
     position: relative;
 }
@@ -61,6 +61,7 @@ display: none;
     border-radius: 1px;
     transition: .2s linear;
 }
+
 .nav-mobile{
     display: none;
     align-items: center;
@@ -69,11 +70,12 @@ display: none;
     position: absolute;
     top: 10vh;
     left: 0;
-
+    border-radius: 10px;
     width: 30vw;
     height: 20vh;
     transition: .2s linear;
-    background-color: forestgreen;
+    background-color: rgb(255, 255, 255);
+    z-index: 10;
 }
 
 
