arrumando header, e texts

--- a/assets/css/algebra.css
+++ b/assets/css/algebra.css
@@ -57,18 +57,30 @@ main .text h1{
 
 main .box-text1 h1{
     
-    font-size: 4em;
-    height: 30%;
-    line-height: 1em;
+    font-size: 3em;
+   min-height: 30%;
+   /* background-color: purple; */
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-bottom: 10px;
+   margin-top: 10px;
 }
 
 main .box-text1 p{
-    height: 70%;
+    min-height: auto;
+    max-height: auto;
     width: 85%;
-    /* background-color: aliceblue; */
+    margin-bottom: 10px;
+    margin-top: 5px;
+    /* background-color: red; */
 
     font-size: 1.9em;
 }
+/* 
+main .box-text1 p:last-child{
+    background-color: purple;
+} */
 
 main .main-btn{
     width: 100vw;
