--- a/assets/css/materias.css
+++ b/assets/css/materias.css
@@ -80,5 +80,16 @@ main .main-btn button{
     height: 100%;
     width: 100%;
     border-radius: 15px;
-    
+    cursor: pointer;
+    transition: .2s linear;
+}
+
+main .main-btn button:hover{
+    transform: translateY(-3px);
+    transition: .2s linear;
+}
+
+main .main-btn button:active{
+    transform: translateY(5px);
+    transition: .2s linear;
 }
