--- a/assets/css/questao.css
+++ b/assets/css/questao.css
@@ -74,12 +74,12 @@ main .main-btn button div{
     justify-content: space-between;
 }
 
-main .main-btn button d:nth-child(1){
+main .main-btn button p:nth-child(1){
  font-size: 2.3em;
  margin-left: 20px;
 }
 
-main .main-btn button d:nth-child(2){
+main .main-btn button p:nth-child(2){
  font-size: 1.9em;
  
 }
